WIP: Add error-prone
// FIXME: add an issue
// FIXME: audit flags (they are way aggressive)
// FIXME: think about -Pq interaction

Change-Id: I1f5e72dbe10ebe053885624d68b9f8fbd0e55ebd
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>